--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,17 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/assets/scss/styles.scss"
             ],
-            "scripts": []
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets/scss"
+              ]
+            },
+            "scripts": [
+              "node_modules/tinycolor2/dist/tinycolor-min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -96,9 +104,12 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/tinycolor2/dist/tinycolor-min.js"
+            ]
           }
         }
       }
